# goit-pythonweb-hw-03

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  message_processor.py  pyproject.toml  renderer.py
templates/: error.html  header_template.html  index.html  message.html  read.html
