[project]
name = "goit-pythonweb-hw-03"
version = "1.0.0"
description = ""
authors = [
    { name = "Max Novik", email = "novik.kor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "mypy (>=1.11)",
    "jinja2 (>=3.1.6)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
